--- a/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
+++ b/Project-I-Social-Card/social-card/src/components/HeaderComponents/Header.css
@@ -1,1 +1,25 @@
 /* All styles for your header Components live here */
+.HeaderContainer {
+  width: 600px;
+  height: auto;
+  background: white;
+  border: 1px solid black;
+  margin: 0 auto;
+  display: flex;
+}
+
+.HeaderThumbnail {
+  width: 200px;
+  /* height: 100px; */
+  border: 1px solid black;
+}
+.HeaderThumbnail img{
+    width: 100%;
+}
+/* .HeaderTitle{
+  
+} */
+.HeaderContent {
+  width: 100%;
+  border: 1px solid black;
+}
