--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -1,17 +1,23 @@
 .container {
   max-width: 40rem;
   height: auto;
-  border: .1rem solid grey;
-  display: flex;
-  justify-content: flex-start;
+  border: 0.1rem solid grey;
   margin: 0 auto;
   background: white;
   margin-top: 5rem;
 }
 
-.layerOne {
+.layerOne,
+.layerTwo,
+.layerThree,
+.layerFour {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
 }
 .layerTwo {
 }
 .layerThree {
+}
+.layerFour {
 }
