--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -4,6 +4,7 @@
   background: rgba(0, 0, 0, 0.733);
 }
 .DisplayScreen h1 {
-  font-size: 3rem;
+  font-size: 5rem;
   color: white;
+  text-align: end;
 }
