--- a/Project-II-Calculator/calculator/src/App.css
+++ b/Project-II-Calculator/calculator/src/App.css
@@ -1,10 +1,11 @@
 .container {
-  max-width: 40rem;
-  height: auto;
-  border: 0.1rem solid grey;
+  max-width: 30rem;
+  height: 100%;
+  box-shadow: 0px 0px 20px 0px #aaa;
   margin: 0 auto;
   background: white;
   margin-top: 5rem;
+  position: relative;
 }
 
 .layerOne,
@@ -20,4 +21,7 @@
 .layerThree {
 }
 .layerFour {
+}
+.layerOne{
+  height: 70px; 
 }
