--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,23 +1,25 @@
 .Button{
-    background: white;
+    background: #e0e0e7;
     padding: 2rem;
-    border: 1px solid black;
+    border-top: 1px solid #777;
+    border-right: 1px solid #666;
     text-align: center;
     cursor: pointer;
     font-size: 3rem;
-    font-weight: 800;
 }
 .Button:hover{
-    background: rgb(241, 236, 236);
+    box-shadow: inset 0px 0px 80px 0px rgba(0,0,0,0.25);
 }
 
 .Action{
     padding: 2rem;
-    border: 1px solid black;
+    border-top: 1px solid #777;
+    border-right: 1px solid #666;
     text-align: center;
     cursor: pointer;
     font-size: 3rem;
+    background: linear-gradient(to bottom, rgba(202,202,204,1) 0%, rgba(196,194,204,1) 100%);
 }
 .Action:hover{
-    background: rgba(160, 0, 29, 0.342);
+    box-shadow: inset 0px 0px 80px 0px rgba(0,0,0,0.25);
 }
