--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -1,10 +1,16 @@
 .DisplayScreen {
   width: 100%;
-  padding: 10px;
-  background: rgba(0, 0, 0, 0.733);
+  height: 100%;
+  padding: 0 10px;
+  background: #1c191c;
+  line-height: 70px;
+  text-align: right;
 }
 .DisplayScreen h1 {
   font-size: 5rem;
   color: white;
-  text-align: end;
+  position: absolute;
+  right: 0;
+  transform-origin: right;
+  padding: 0 30px;
 }
